envoy/envoy-cm-lds-cds.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-lds-cds
data:
  lds.yaml: |
    version_info: '0'
    resources:
      - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
        name: listener_local
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: ingress_http
                  route_config:
                    name: local_route
                    virtual_hosts:
                      - name: httpbin
                        domains: ["httpbin.local*"]
                        routes:
                          - match: { prefix: "/" }
                            route: { cluster: httpbin }
                      # - name: echoserver
                      #   domains: ["echoserver.local*"]
                      #   routes:
                      #     - match: { prefix: "/" }
                      #       route: { cluster: echoserver }
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                  access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
  cds.yaml: |
    version_info: '0'
    resources:
      - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
        name: httpbin
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: httpbin
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: httpbin
                        port_value: 80
      - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
        name: echoserver
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: echoserver
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: echoserver.echoserver
                        port_value: 80
