envoy/envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        args:
          - -c
          - /etc/envoy/envoy.yaml
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy
            readOnly: true
          - name: envoy-config-lds-cds
            mountPath: /config/
            readOnly: true
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
        - name: envoy-config-lds-cds
          configMap:
            name: envoy-config-lds-cds
